--- a/index.html
+++ b/index.html
@@ -3,25 +3,54 @@
 	Hyperspace by HTML5 UP
 	html5up.net | @ajlkn
 	Free for personal and commercial use under the CCA 3.0 license (html5up.net/license)
+  -->
+<!--
+The website should:
+A) inform users what we do
+B) inform users of our capabilities and non-capabilities
+B) emphasize that we have rock bottom pricing available on inquiry
+
+What we do:
+- Digital electronic circuit design
+- Schematic capture
+- PCB layout
+
+To summarize, we take a design from concept/idea to a printed circuit
+board.
+
+Capabilities:
+- 2-, 4-, or 6-layer boards
+- through-hole and SMD, including BGA
+- trace length matching, e.g., for SDR SDRAM
+
+Non-capabilities:
+- blind and/or buried vias
+- micro vias
+- back drilling
+- DDRx
+- EMC compliance
 -->
 <html>
 	<head>
-		<title>Hyperspace by HTML5 UP</title>
+		<title>TAKEWON ELECTRONICS</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
+            <link rel="icon" type="image/x-icon" href="images/favicon.ico">
 		<noscript><link rel="stylesheet" href="assets/css/noscript.css" /></noscript>
 	</head>
 	<body class="is-preload">
 
 		<!-- Sidebar -->
 			<section id="sidebar">
+				<img src="images/twetwe.png"/>
 				<div class="inner">
 					<nav>
 						<ul>
 							<li><a href="#intro">Welcome</a></li>
-							<li><a href="#one">Who we are</a></li>
-							<li><a href="#two">What we do</a></li>
+							<li><a href="#one">What we do</a></li>
+							<li><a href="#two">Capabilities</a></li>
+							<li><a href="#four">Pricing</a></li>
 							<li><a href="#three">Get in touch</a></li>
 						</ul>
 					</nav>
@@ -34,56 +63,70 @@
 				<!-- Intro -->
 					<section id="intro" class="wrapper style1 fullscreen fade-up">
 						<div class="inner">
-							<h1>Hyperspace</h1>
-							<p>Just another fine responsive site template designed by <a href="http://html5up.net">HTML5 UP</a><br />
-							and released for free under the <a href="http://html5up.net/license">Creative Commons</a>.</p>
-							<ul class="actions">
+							<h1>TAKEWAN ELECTRONICS</h1>
+							<p>We design your prototype for less!</p>
+							<p>We take a design from concept/idea to a printed circuit board layout.</p>
+							<p>We offer service at attractive prices (available upon request).</p>
+					<!--		<ul class="actions">
 								<li><a href="#one" class="button scrolly">Learn more</a></li>
-							</ul>
+							</ul>-->
 						</div>
 					</section>
 
 				<!-- One -->
 					<section id="one" class="wrapper style2 spotlights">
 						<section>
-							<a href="#" class="image"><img src="images/pic01.jpg" alt="" data-position="center center" /></a>
+							<a href="#" class="image"><img src="images/backone.jpg" alt="" data-position="center center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Sed ipsum dolor</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
-									<ul class="actions">
+									<h2>What we do</h2>
+									<p><b>Digital electronic circuit design</b></p>
+									<p><b>Schematic capture</b></p>
+									<p><b>PCB layout</b></p>
+
+									<!-- <ul class="actions">
 										<li><a href="generic.html" class="button">Learn more</a></li>
-									</ul>
+									</ul> -->
 								</div>
 							</div>
 						</section>
-						<section>
-							<a href="#" class="image"><img src="images/pic02.jpg" alt="" data-position="top center" /></a>
+						<section id="two" class="wrapper style2 spotlights">
+							<a href="#" class="image"><img src="images/backthree.jpg" alt="" data-position="top center" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Feugiat consequat</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
-									<ul class="actions">
+									<h2>Capabilities</h2>
+									<p><b>2-, 4-, or 6- layer boards</b></p>
+									<p><b>through-hole and SMD, including BGA</b></p>
+									<p><b>trace length matching (e.g. for SDR SDRAM)</b></p>
+									<p></p>
+									<p>We do not do designs requiring:</p>
+									<ul><li>blind and/or buried vias</li>
+									<li>micro vias</li>
+									<li>back drilling</li>
+									<li>DDRx</li>
+									<li>EMC compliance</li></ul>
+								<!--	<ul class="actions">
 										<li><a href="generic.html" class="button">Learn more</a></li>
-									</ul>
+									</ul> -->
 								</div>
 							</div>
 						</section>
-						<section>
-							<a href="#" class="image"><img src="images/pic03.jpg" alt="" data-position="25% 25%" /></a>
+						<section id="four" class="wrapper style2 spotlights">
+							<a href="#" class="image"><img src="images/backfour.jpg" alt="" data-position="25% 25%" /></a>
 							<div class="content">
 								<div class="inner">
-									<h2>Ultricies aliquam</h2>
-									<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus.</p>
-									<ul class="actions">
+									<h2>Pricing</h2>
+									<p>Pricing is based on the complexity of the work. Hence, it is quoted based on the specific project. However, because our in-house tools are extremely efficient, we are able to quote you very attractive prices. Contact us today for a quote!</p>
+									<p>The price quoted includes one design, reasonable individualized assistance, and unlimited free redesigns if you are unable to make the prototype pass functionality tests.</p>
+								<!--	<ul class="actions">
 										<li><a href="generic.html" class="button">Learn more</a></li>
-									</ul>
+									</ul>  -->
 								</div>
 							</div>
 						</section>
 					</section>
 
-				<!-- Two -->
+				<!-- Two 
 					<section id="two" class="wrapper style3 fade-up">
 						<div class="inner">
 							<h2>What we do</h2>
@@ -125,15 +168,15 @@
 							</ul>
 						</div>
 					</section>
-
+-->
 				<!-- Three -->
 					<section id="three" class="wrapper style1 fade-up">
 						<div class="inner">
 							<h2>Get in touch</h2>
-							<p>Phasellus convallis elit id ullamcorper pulvinar. Duis aliquam turpis mauris, eu ultricies erat malesuada quis. Aliquam dapibus, lacus eget hendrerit bibendum, urna est aliquam sem, sit amet imperdiet est velit quis lorem.</p>
+							
 							<div class="split style1">
 								<section>
-									<form method="post" action="#">
+									<!-- <form method="post" action="#">
 										<div class="fields">
 											<div class="field half">
 												<label for="name">Name</label>
@@ -151,25 +194,27 @@
 										<ul class="actions">
 											<li><a href="" class="button submit">Send Message</a></li>
 										</ul>
-									</form>
+									</form> -->
+								<p>Please email a brief description of your project to projects@takewan.com</p>
+<p>We respond promptly.</p>
 								</section>
 								<section>
 									<ul class="contact">
 										<li>
 											<h3>Address</h3>
-											<span>12345 Somewhere Road #654<br />
-											Nashville, TN 00000-0000<br />
+											<span>5510 Armitos Ave.<br />
+											Goleta, CA 93117<br />
 											USA</span>
 										</li>
 										<li>
-											<h3>Email</h3>
-											<a href="#">user@untitled.tld</a>
+											<h3>Email Us:</h3>
+											projects@takewan.com
 										</li>
-										<li>
+										<!--<li>
 											<h3>Phone</h3>
-											<span>(000) 000-0000</span>
-										</li>
-										<li>
+											<span>(650) 609-1060</span>
+										</li>-->
+										<!-- <li>
 											<h3>Social</h3>
 											<ul class="icons">
 												<li><a href="#" class="icon brands fa-twitter"><span class="label">Twitter</span></a></li>
@@ -178,7 +223,7 @@
 												<li><a href="#" class="icon brands fa-instagram"><span class="label">Instagram</span></a></li>
 												<li><a href="#" class="icon brands fa-linkedin-in"><span class="label">LinkedIn</span></a></li>
 											</ul>
-										</li>
+										</li> -->
 									</ul>
 								</section>
 							</div>
@@ -191,7 +236,7 @@
 			<footer id="footer" class="wrapper style1-alt">
 				<div class="inner">
 					<ul class="menu">
-						<li>&copy; Untitled. All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
+						<li>&copy; Takewan Electronics All rights reserved.</li><li>Design: <a href="http://html5up.net">HTML5 UP</a></li>
 					</ul>
 				</div>
 			</footer>
