--- a/index.html
+++ b/index.html
@@ -32,7 +32,7 @@ Non-capabilities:
 -->
 <html>
 	<head>
-		<title>TAKEWON ELECTRONICS</title>
+		<title>TAKEWAN ELECTRONICS</title>
 		<meta charset="utf-8" />
 		<meta name="viewport" content="width=device-width, initial-scale=1, user-scalable=no" />
 		<link rel="stylesheet" href="assets/css/main.css" />
